--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,10 @@
     <string name="GiaVC">Giá VC</string>
     <string name="DVTinh">ĐV tính</string>
     <string name="DSVT">DANH SÁCH VẬT TƯ</string>
+    <string name="DSCT">DANH SÁCH CÔNG TRÌNH</string>
+    <string name="MaCT">Mã Công Trình</string>
+    <string name="TenCT">Tên Công Trình</string>
+    <string name="DiaChi">Địa Chỉ</string>
     <string name="admin">admin</string>
     <string name="admin_login">Administrator Login</string>
     <string name="supervisor">Supervisor</string>
