--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">LONDUNG Management System</string>
-    <string name="TenVT">Tên VT</string>
+    <string name="app_name">Transport Management System</string>
+    <string name="TenVT">Tên Vật Tư</string>
     <string name="maVT">Mã VT</string>
     <string name="GiaVC">Giá VC</string>
     <string name="DVTinh">ĐV tính</string>
@@ -59,12 +59,6 @@
         <item>Divorced</item>
         <item>Widowed</item>
     </string-array>
-
-    <array name="Hinh">
-        <item>Châu Á</item>
-        <item>Châu Mỹ</item>
-        <item>Châu Úc</item>
-    </array>
 
 
 </resources>
